# libqmatrixclient

./: CMakeLists.txt  connection.cpp  connection.h  meson.build  room.h  user.cpp
jobs/: basejob.cpp  basejob.h  syncjob.cpp
serverapi/: callconfig.h  logout.h
